[package]
name = "apple-roulette"
version = "0.1.0"
authors = ["Andrei Odintsov <forestryks1@gmail.com>"]
license = "MIT or Apache-2.0"
homepage = "https://github.com/Forestryks/apple-roulette"
repository = "https://github.com/Forestryks/apple-roulette"
description = "Want some strudel?"
readme = "README.md"
keywords = ["arp", "apple"]
edition = "2021"

[dependencies]
pnet = "0.31.0"
pnet_datalink = "0.31.0"
ipnetwork = "0.19.0"
curl = "0.4.44"
csv = "1.1"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"

[profile.release]
panic = "abort"
